--- a/JohnChristian_Resume.html
+++ b/JohnChristian_Resume.html
@@ -88,6 +88,12 @@
         <li>Trading</li>
     </ul>
     </section>
+
+    <!-- Character Reference -->
+    <section>
+        <h2>Character Reference:</h2>
+        <p>Cristian de Luna</p>
+    </section>
     <footer>Thank you for your time reading my resume. Last update dated September 23, 2023</footer>
 </body>
 </html>
