CSS Class practice

--- a/CSS.html
+++ b/CSS.html
@@ -13,6 +13,19 @@
             color: red;
             font-weight: bold;
             font-family: Arial;
+            text-align: center;
+        }
+
+        #unique {
+            background-color: blue;
+        }
+
+        .redbg {
+            background-color: red;
+        }
+
+        .comicsans{
+            font-family: 'Courier New', Courier, monospace;
         }
 
     </style>
@@ -21,8 +34,13 @@
 </head>
 
 <body>
-   <h1>This is CSS</h1>
-   <h1>This is color blue</h1>
+   <h1 class="redbg">This is CSS</h1>
+   <h1 class="redbg comicsans">This is color blue</h1>
+   <h1 class="comicsans">Another one!</h1>
+
    <p>This is a paragraph text</p>
+   <p>Another paragraph</p>
+   <p id="unique">unique paragraph</p>
+
 </body>
 </html>
