Used external CSS

--- a/CSS.html
+++ b/CSS.html
@@ -4,33 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            color: blue;
-        }
-
-        p{
-            color: red;
-            font-weight: bold;
-            font-family: Arial;
-            text-align: center;
-        }
-
-        #unique {
-            background-color: blue;
-        }
-
-        .redbg {
-            background-color: red;
-        }
-
-        .comicsans{
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-    </style>
-
-
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
@@ -42,7 +16,7 @@
    <p>Another paragraph</p>
    <p id="unique">unique paragraph</p>
 
-   <a href="CSS2.html">Click Me</a>
+   <a class ="link" href="CSS2.html">Click Me</a>
 
 </body>
 </html>
